tests/NormalTests/paczka1/fuzzy1/42275227.err
Error in line 8: s7r S279 45,4
Error in line 10: s7r S90 14,9
Error in line 13: FNKM S783 88,8
Error in line 4: ye66R S90 55,1
Error in line 14: FNKM S279 44,9
Error in line 16: 68r A561 18,7
Error in line 24: 68r S279 11,4
Error in line 31: 2Dmlkrw S279 -2,3
Error in line 21: 2Dmlkrw S279 339,5
Error in line 29: FNKM A561 167,5
